--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="Themes/Themes01/Assets/css/main.min.css" rel="stylesheet" />
+  <script src="https://honglam.vn/Themes/Themes01/Assets/js/_Home.min.js" defer></script>
 </head>
 <body>
   <app-root></app-root>
